[gd_scene load_steps=12 format=3 uid="uid://b1sajuijlb7f8"]

[ext_resource type="Script" path="res://scenes/maps/boss_fight.gd" id="1_nfmih"]
[ext_resource type="TileSet" uid="uid://kbn7x6shxee4" path="res://assets/tilesets/general.tres" id="1_w873n"]
[ext_resource type="PackedScene" uid="uid://7eqkumnlqoxm" path="res://scenes/enemies/final_boss.tscn" id="2_e32c7"]
[ext_resource type="PackedScene" uid="uid://c6p6x8iafg34y" path="res://scenes/player.tscn" id="3_hx5fr"]
[ext_resource type="Script" path="res://scenes/maps/boss_fight_camera.gd" id="5_5uymj"]
[ext_resource type="PackedScene" uid="uid://cr2w3ybvgq0f7" path="res://scenes/utils/pancake.tscn" id="5_oduvj"]
[ext_resource type="PackedScene" uid="uid://bbkojwyntyex2" path="res://scenes/utils/ash_particles.tscn" id="6_1q0eg"]
[ext_resource type="Texture2D" uid="uid://cjh2p5u0ypk7g" path="res://assets/sprites/utils/burned_tree.png" id="7_uwl1v"]
[ext_resource type="PackedScene" uid="uid://cvl5rx7otydvs" path="res://scenes/UI/GUI.tscn" id="8_vxcss"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_m2dws"]
a = Vector2(-128, -3)
b = Vector2(150, -3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdgmd"]
size = Vector2(308, 15)

[node name="BossFight" type="Node2D"]
script = ExtResource("1_nfmih")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(0, 2)
tile_set = ExtResource("1_w873n")
format = 2
layer_0/name = "ground"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(0, 917504, 19, 65536, 720896, 19, 131072, 720896, 19, 196608, 851968, 19, 262144, 983040, 19, 327680, 720896, 19, 393216, 983040, 19, 458752, 851968, 19, 524288, 720896, 19, 1, 720896, 19, 65537, 917504, 19, 131073, 917504, 19, 196609, 983040, 19, 262145, 720896, 19, 327681, 720896, 19, 393217, 720896, 19, 458753, 917504, 19, 524289, 851968, 19, 2, 786432, 19, 393218, 983040, 19, 458754, 720896, 19, 524290, 983040, 19, 3, 720896, 14, 65539, 1114112, 16, 131075, 786432, 15, 196611, 917504, 18, 262147, 1114112, 15, 327683, 720896, 16, 458755, 851968, 19, 524291, 917504, 19, 4, 1114112, 16, 65540, 917504, 18, 131076, 917504, 18, 196612, 786432, 15, 262148, 917504, 18, 327684, 1114112, 15, 393220, 720896, 16, 458756, 720896, 19, 524292, 720896, 19, 5, 917504, 18, 65541, 786432, 15, 131077, 917504, 18, 196613, 917504, 18, 262149, 786432, 15, 327685, 917504, 18, 393221, 786432, 16, 458757, 851968, 19, 524293, 983040, 19, 6, 786432, 15, 65542, 917504, 18, 131078, 917504, 18, 196614, 917504, 18, 262150, 786432, 15, 327686, 786432, 15, 393222, 1114112, 15, 458758, 720896, 15, 524294, 720896, 15, 7, 917504, 18, 65543, 786432, 15, 131079, 917504, 18, 196615, 917504, 18, 262151, 917504, 18, 327687, 917504, 18, 393223, 786432, 15, 458759, 786432, 15, 524295, 786432, 15, 8, 786432, 15, 65544, 786432, 15, 131080, 786432, 15, 196616, 786432, 15, 262152, 917504, 18, 327688, 786432, 15, 458760, 851968, 15, 524296, 851968, 15, 9, 917504, 18, 65545, 786432, 15, 131081, 786432, 15, 196617, 786432, 15, 262153, 917504, 18, 327689, 917504, 18, 393225, 786432, 16, 458761, 720896, 19, 524297, 851968, 19, 10, 1048576, 16, 65546, 786432, 15, 131082, 786432, 15, 196618, 786432, 15, 262154, 917504, 18, 327690, 1048576, 15, 393226, 851968, 16, 458762, 851968, 19, 524298, 720896, 19, 11, 851968, 14, 65547, 1048576, 16, 131083, 917504, 18, 196619, 917504, 18, 262155, 1048576, 15, 327691, 851968, 16, 393227, 851968, 19, 458763, 917504, 19, 524299, 786432, 19, 12, 720896, 19, 65548, 851968, 14, 131084, 851968, 15, 196620, 851968, 15, 262156, 851968, 16, 327692, 983040, 19, 393228, 786432, 19, 458764, 983040, 19, 524300, 983040, 19, 13, 917504, 19, 65549, 720896, 19, 131085, 720896, 19, 196621, 983040, 19, 262157, 786432, 19, 327693, 786432, 19, 393229, 851968, 19, 458765, 917504, 19, 524301, 720896, 19, 14, 720896, 19, 65550, 917504, 19, 131086, 983040, 19, 196622, 720896, 19, 262158, 851968, 19, 327694, 786432, 19, 393230, 720896, 19, 458766, 720896, 19, 524302, 917504, 19, -65536, 720896, 19, -65535, 720896, 19, -65534, 720896, 19, -65533, 917504, 19, -65532, 720896, 14, -65531, 786432, 14, -65530, 786432, 14, -65529, 786432, 14, -65528, 786432, 14, -65527, 786432, 14, -65526, 851968, 14, -65525, 851968, 19, -65524, 720896, 19, -65523, 983040, 19, -65522, 917504, 19, 589825, 720896, 19, 589824, 851968, 19, 589826, 983040, 19, 589827, 720896, 19, 589828, 917504, 19, 589829, 786432, 19, 589830, 720896, 15, 589831, 786432, 15, 589832, 851968, 15, 589833, 917504, 19, 589834, 720896, 19, 589835, 851968, 19, 589836, 720896, 19, 589837, 851968, 19, 589838, 720896, 19, 393224, 1048576, 15, 262146, 720896, 16, 196610, 720896, 15, 131074, 720896, 15, 65538, 720896, 14, 393219, 983040, 19, 327682, 720896, 19, 655367, 786432, 15, 720903, 786432, 16, 655366, 720896, 15, 720902, 720896, 16, 720904, 851968, 16, 655368, 851968, 15, 720907, 917504, 19, 720899, 917504, 19, 655361, 917504, 19, 655364, 983040, 19, 720905, 983040, 19, 655369, 983040, 19, 655365, 851968, 19, 786440, 851968, 19, 786439, 720896, 19, 786438, 917504, 19, 786437, 786432, 19, 720901, 720896, 19, 720900, 917504, 19, 786436, 983040, 19, 655363, 851968, 19, 655362, 720896, 19, 720898, 720896, 19, 786434, 983040, 19, 786435, 851968, 19, 786433, 720896, 19, 720897, 851968, 19, 720896, 983040, 19, 786432, 983040, 19, 655360, 720896, 19, 786441, 786432, 19, 655370, 720896, 19, 720906, 917504, 19, 786442, 983040, 19, 786443, 720896, 19, 786444, 851968, 19, 786445, 983040, 19, 786446, 720896, 19, 655374, 720896, 19, 720910, 720896, 19, 655373, 983040, 19, 720909, 983040, 19, 655372, 983040, 19, 720908, 720896, 19, 655371, 720896, 19, -131069, 720896, 19, -131068, 786432, 19, -131067, 917504, 19, -131066, 786432, 19, -131065, 720896, 19, -131064, 917504, 19, -131063, 983040, 19, -131062, 983040, 19, -131061, 720896, 19, 851971, 720896, 19, 851972, 720896, 19, 851973, 786432, 19, 851974, 851968, 19, 851975, 917504, 19, 851976, 983040, 19, 851977, 720896, 19, 851978, 786432, 19, 851979, 720896, 19, 851980, 720896, 19, 851970, 720896, 19, 851969, 720896, 19, 851968, 720896, 19, 851981, 720896, 19, 851982, 720896, 19, 917508, 720896, 19, 917509, 786432, 19, 917510, 720896, 19, 917511, 851968, 19, 917512, 720896, 19, 917513, 786432, 19, 917514, 720896, 19, 917515, 720896, 19, 917516, 720896, 19, 917517, 720896, 19, 983045, 983040, 19, 983046, 786432, 19, 983047, 983040, 19, 983048, 851968, 19, 983049, 917504, 19, 983050, 720896, 19, 983044, 917504, 19, 983051, 720896, 19, 983052, 720896, 19, 983053, 720896, 19, 983054, 720896, 19, 983055, 720896, 19, 983056, 720896, 19, 983043, 720896, 19, 983042, 720896, 19, 983041, 720896, 19, 983040, 720896, 19, 1048575, 720896, 19, 917503, 720896, 19, 983039, 720896, 19)
layer_1/name = "foliage"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131085, 917508, 0, 2, 851972, 0, 327692, 851972, 0, 589834, 851972, 0, 524297, 917508, 0, 589828, 917508, 0, 720901, 851972, 0, 196609, 917508, 0)
layer_2/name = "trees"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(851972, 262145, 0, 851971, 262145, 0, 851970, 262145, 0, 786434, 262145, 0, 720895, 262145, 0, 851969, 262145, 0, 851978, 262145, 0, 851979, 262145, 0, 786443, 262145, 0, 786444, 262145, 0, 786445, 262145, 0, 720909, 262145, 0, 720910, 262145, 0, 786446, 262145, 0, 851980, 262145, 0, 851981, 262145, 0, 851982, 262145, 0, 393232, 262145, 0, 458768, 262145, 0, 524304, 262145, 0, 589840, 262145, 0, 589839, 262145, 0, 589838, 262145, 0, 524303, 262145, 0, 655375, 262145, 0, 655374, 262145, 0, 393231, 262145, 0, 458767, 262145, 0, 327695, 262145, 0, 262159, 262145, 0, 196623, 262145, 0, 131087, 262145, 0, 131088, 262145, 0, 65552, 262145, 0, 65551, 262145, 0, 15, 262145, 0, -65521, 262145, 0, -1, 262145, 0, 65535, 262145, 0, 65534, 262145, 0, 131070, 262145, 0, 196606, 262145, 0, 262142, 262145, 0, 327678, 262145, 0, 262143, 262145, 0, 196607, 262145, 0, 131071, 262145, 0, 327679, 262145, 0, 393215, 262145, 0, 458751, 262145, 0, 458750, 262145, 0, 524286, 262145, 0, 589822, 262145, 0, 589823, 262145, 0, 524287, 262145, 0, 655359, 262145, 0, 589824, 262145, 0, -65522, 262145, 0, -65536, 262145, 0, 786431, 262145, 0, 720896, 262145, 0, 655360, 262145, 0, 786433, 262145, 0, 786432, 262145, 0, 851967, 262145, 0, 851977, 262145, 0, 851973, 262145, 0, 851968, 262145, 0, 917509, 262145, 0, 917508, 262145, 0, 917507, 262145, 0, 917506, 262145, 0, 917505, 262145, 0, 917503, 262145, 0, 786430, 262145, 0, 720894, 262145, 0, 655358, 262145, 0, 655357, 262145, 0, 589821, 262145, 0, 524285, 262145, 0, 458749, 262145, 0, 393213, 262145, 0, 327677, 262145, 0, 917513, 262145, 0, 917514, 262145, 0, 917515, 262145, 0, 917516, 262145, 0, 917517, 262145, 0, 917518, 262145, 0, 851983, 262145, 0, 786447, 262145, 0, 720911, 262145, 0, 720912, 262145, 0, 655376, 262145, 0, 327696, 262145, 0, 262160, 262145, 0, 196624, 262145, 0, 917504, 262145, 0, 983039, 262145, 0, 983038, 262145, 0, 917502, 262145, 0, 851966, 262145, 0, 786429, 262145, 0, 720893, 262145, 0, 917519, 262145, 0, 917520, 262145, 0, 851984, 262145, 0, 786448, 262145, 0)
layer_3/name = "house"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()
layer_4/name = "visual finishes"
layer_4/enabled = true
layer_4/modulate = Color(1, 1, 1, 1)
layer_4/y_sort_enabled = false
layer_4/y_sort_origin = 0
layer_4/z_index = 3
layer_4/tile_data = PackedInt32Array()

[node name="FinalBoss" parent="." instance=ExtResource("2_e32c7")]
position = Vector2(121, 9)
can_shoot = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(116, 122)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("SegmentShape2D_m2dws")

[node name="FirstCamera" type="Camera2D" parent="."]
position = Vector2(119, 189)

[node name="player" parent="." instance=ExtResource("3_hx5fr")]
position = Vector2(120, 231)

[node name="BossFightCamera" type="Camera2D" parent="."]
position = Vector2(119, 54)
position_smoothing_enabled = true
script = ExtResource("5_5uymj")

[node name="Timer" type="Timer" parent="BossFightCamera"]
one_shot = true

[node name="TransitionCamera" type="Camera2D" parent="."]

[node name="Pancake2" parent="." instance=ExtResource("5_oduvj")]
position = Vector2(217, 56)

[node name="Pancake" parent="." instance=ExtResource("5_oduvj")]
position = Vector2(26, 19)

[node name="ash_particles" parent="." instance=ExtResource("6_1q0eg")]
position = Vector2(121, -26)

[node name="Tree" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(88, 243)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree"]
z_index = 1
position = Vector2(-20, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree/Tree"]
z_index = 1
position = Vector2(-21, 1)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree/Tree/Tree"]
z_index = 1
position = Vector2(-20, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree/Tree/Tree/Tree"]
z_index = 1
position = Vector2(-21, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree/Tree/Tree/Tree/Tree"]
z_index = 1
position = Vector2(-21, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(253, 243)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree2"]
z_index = 1
position = Vector2(-20, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree2/Tree"]
z_index = 1
position = Vector2(-21, 1)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree2/Tree/Tree"]
z_index = 1
position = Vector2(-20, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree2/Tree/Tree/Tree"]
z_index = 1
position = Vector2(-21, 0)
texture = ExtResource("7_uwl1v")

[node name="Tree" type="Sprite2D" parent="Tree2/Tree/Tree/Tree/Tree"]
z_index = 1
position = Vector2(-21, 0)
texture = ExtResource("7_uwl1v")

[node name="TimeBetweenCameraChanges" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(116, 122)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(6, 2.5)
shape = SubResource("RectangleShape2D_sdgmd")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(116, 122)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(0, -144)
shape = SubResource("RectangleShape2D_sdgmd")

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2(116, 163)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
position = Vector2(2, 91)
shape = SubResource("RectangleShape2D_sdgmd")

[node name="GUI" parent="." instance=ExtResource("8_vxcss")]

[connection signal="player_hitted_enemy" from="." to="BossFightCamera" method="_on_boss_fight_player_hitted_enemy"]
[connection signal="player_hurt" from="." to="BossFightCamera" method="_on_boss_fight_player_hurt"]
[connection signal="start_boss_fight" from="." to="FinalBoss" method="_on_boss_fight_start_boss_fight"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="health_change" from="player" to="." method="_on_player_health_change"]
[connection signal="health_change" from="player" to="BossFightCamera" method="_on_player_health_change"]
[connection signal="health_change" from="player" to="GUI" method="_on_player_health_change"]
[connection signal="hurt_enemy" from="player" to="." method="_on_player_hurt_enemy"]
[connection signal="hurt_enemy" from="player" to="BossFightCamera" method="_on_player_hurt_enemy"]
[connection signal="timeout" from="BossFightCamera/Timer" to="BossFightCamera" method="_on_timer_timeout"]
[connection signal="timeout" from="TimeBetweenCameraChanges" to="." method="_on_time_between_camera_changes_timeout"]
